--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,12 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>svelte-toast demo</title>
+  <link rel="stylesheet" href="app.css">
 </head>
 <body>
   <div id="svelte-toast-demo">
     <div class="toast-btn">Toast It</div>
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
